Update Readme File/ Added PHoto

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "candidate-portfolio",
+  "name": "hr-candidate-management-dashboard",
   "private": true,
   "version": "0.0.0",
   "type": "module",
